# ide-backend

./: .gitignore  .gitmodules  .travis.yml  A.hs  BlockingOps.hs  ChangeLog.md  Common.hs  CoreLicenses.txt  GHCSession.hs  GhcHsWalk.hs  GhcMakeFixed.hs  GhcRun.hs  GhcServer.hs  IdeSession.hs  LICENSE  ModGuts.txt  ModuleName.hs  Progress.hs  README.md  RpcServer.hs  RunAPI.hs  fpc-ide.cabal  fpc-ide.hs  ide-backend-exe-cabal.hs  ide-backend.cabal  ide-backend.hs  sources.txt  stack-7.8.yaml  stack.yaml  travis_long  typecheck-dir.hs
DynExe/: DynExe.cabal.good
IdeSession/: BlockingOps.hs  Cabal.hs  Config.hs  Debug.hs  ExeCabal.hs  ExeCabalClient.hs  ExeCabalServer.hs  Query.hs  State.hs  TraceMonad.hs  Update.hs  Util.hs
IdeSession/GHC/: API.hs  Client.hs  HsWalk.hs  MakeFixed.hs  Requests.hs  Responses.hs  Run.hs  Server.hs
IdeSession/RPC/: API.hs  Client.hs  Server.hs
IdeSession/Strict/: Container.hs  IntMap.hs  IntervalMap.hs  List.hs  MVar.hs  Map.hs  Maybe.hs  Pair.hs  StateT.hs  Trie.hs
IdeSession/Types/: Private.hs  Progress.hs  Public.hs  Translation.hs
IdeSession/Update/: ExecuteSessionUpdate.hs  IdeSessionUpdate.hs
IdeSession/Util/: BlockingOps.hs  PrettyVal.hs
TestSuite/: TestSuite.hs
TestSuite/TestSuite/: Assertions.hs  Session.hs  State.hs
TestSuite/inputs/: BSD_TEST  README.md
TestSuite/inputs/Puns/cabals/: deepseq.cabal  transformers.cabal
doc/: ModGuts.txt  SETUP.md  compiling-isolation-runner.txt  ghc-7.4.2-build-instructions.txt  haddock.txt
ghc-patches/: 0001-Add-support-for-frontend-plugins.patch  0004-Make-renamed-defs-available-after-typechecking.patch
ghc-patches/7.4.2/: 0001-Add-support-for-frontend-plugins.patch  0002-Pass-renamer-results-through-typechecker.patch  0003-Fix-ghc-7040.patch  0003-Provide-access-to-the-TID-of-the-runStmt-sandbox.patch  0004-Provide-access-to-the-TID-of-the-runStmt-sandbox.patch  0005-Backport-patch-to-7231-commit-772e6d2.patch  0006-Add-last-commit-short-hash-to-ghc-version-name.patch  0007-FIx-to-Add-last-commit-short-hash.patch  0008-Add-hook-to-HscPlugin-for-QQs.patch  0009-Provide-HscEnv-for-runHscQQ.patch  ghc7040.patch  ghc7231.patch
ghc-patches/7.6.2/: 0001-Add-support-for-frontend-plugins.patch  (+1 more)
ghc-vs-helper/: ghc-vs-helper.cabal  ghc-vs-helper.hs
ide-backend/: Architecture.md  IdeSession.hs  LICENSE  README.md  ide-backend.cabal
ide-backend-common/: ChangeLog.md  README.md  ide-backend-common.cabal
ide-backend-rts/: ide-backend-rts.cabal
ide-backend-server/: .gitignore  Auxiliary.hs  Break.hs  Debug.hs  FilePathCaching.hs  GhcShim.hs  HsWalk.hs  Posix.hsc  RTS.hs  RequestRunning.hs  Run.hs  Server.hs  Setup.hs  TraceMonad.hs  ide-backend-server.cabal
ide-backend-server/GhcShim/: GhcShim742.hs
ide-backend/IdeSession/: Cabal.hs  Config.hs  ExeCabalClient.hs  ExeCabalServer.hs  Licenses.hs  Query.hs  State.hs  Update.hs
ide-backend/IdeSession/GHC/: Client.hs
ide-backend/IdeSession/RPC/: Client.hs
ide-backend/IdeSession/Update/: ExecuteSessionUpdate.hs  IdeSessionUpdate.hs
ide-backend/TestSuite/: TestSuite.hs
ide-backend/TestSuite/TestSuite/: Assertions.hs  Session.hs  State.hs
ide-backend/TestSuite/TestSuite/Tests/: BuildDoc.hs  BuildExe.hs  BuildLicenses.hs  C.hs  CabalMacros.hs  Compilation.hs  FFI.hs  Integration.hs  InterruptRunExe.hs  Issues.hs  Packages.hs  Performance.hs  Pseudoterminal.hs  SessionRestart.hs  SessionState.hs  StdIO.hs  UpdateTargets.hs
ide-backend/TestSuite/inputs/AnotherB/: B.hs
ide-backend/TestSuite/inputs/Cabal-1.22.0.0/: Paths_Cabal.hs
ide-backend/TestSuite/inputs/Cabal-1.22.0.0/Distribution/Simple/Program/: Ar.hs
ide-backend/TestSuite/inputs/FFI/ffiles/: life.h
ide-backend/TestSuite/inputs/MainModule/ParFib/: Main.hs
ide-backend/TestSuite/inputs/Puns/GHC/RTS/: EventParserUtils.hs
ide-backend/TestSuite/inputs/Puns/cabals/: bytestring.cabal  mtl.cabal
ide-backend/TestSuite/inputs/compiler/utils/: Exception.hs  Maybes.lhs
ide-backend/test/: TestTools.hs  rpc-server.hs  typecheck-dir.hs
ide-backend/test-db-order/: GenMakefile.hs  Makefile
ide-backend/test-gui/: IdeGuiTest.hs
ide-backend/test-packages/testpkg-A/Testing/: TestPkgA.hs
ide-backend/test-packages/testpkg-B/Testing/: TestPkgB.hs
ide-backend/test-packages/testpkg-C/Testing/: TestPkgC.hs
ide-backend/test-packages/testpkg-D/Testing/: TestPkgD.hs
ide-backend/test-packages/testpkg-E-0.3/: testpkg-E.cabal
ide-backend/test-packages/testpkg-E-0.3/Testing/: TestPkgE.hs
ide-backend/test-packages/testpkg-E-0.4/Testing/: TestPkgE.hs
ide-backend/test-packages/testpkg-F-B/: testpkg-F.cabal
ide-backend/test-packages/testpkg-F-C/Testing/: TestPkgF.hs
ide-backend/test-packages/testpkg-F-D/Testing/: TestPkgF.hs
ide-backend/test-packages/testpkg-G-0.1/Testing/: TestPkgG.hs
ide-backend/test-packages/testpkg-G-0.2/Testing/: TestPkgG.hs
ide-backend/test-packages/testpkg-G-0.3/: testpkg-E.cabal
ide-backend/test-packages/testpkg-G-0.4/: LICENSE  testpkg-E.cabal
protoide/: ProtoIDE.hs  ProtoIDE.html  ProtoIDE.js  editor.html  editor.js  protoide.cabal
rts/: IdeBackendPlugin.hs  IdeBackendRTS.hs  ide-backend-rts.cabal
server/: Break.hs  Conv.hs  FilePathCaching.hs  GhcShim.hs  Haddock.hs  HsWalk.hs  IdPropCaching.hs  Run.hs  Server.hs  TraceMonad.hs  ide-backend-server.cabal  ide-backend-server.hs
server/GhcShim/: API.hs  GhcShim710.hs  GhcShim742.hs  GhcShim78.hs
setup/: SETUP.md  ghc-7.8.3.fp  ghc-7.8.4.fp
test/: GhcErrors.hs  Makefile  NamedPipeTest.hs  TestTools.hs  coc.hs  ghc-errors.hs  golden-errors.hs  in-process.hs  rpc-server.hs  test-pkg-dbs.hs  typecheck-dir.hs
test-db-order/: test-db-order.hs
test-gui/: IdeGuiTest.hs  IdeGuiTest.ui  ide-backend-test-gui.cabal
test-packages/testpkg-A/: testpkg-A.cabal
test-packages/testpkg-G-0.2/: testpkg-E.cabal
test/MainModule/cabals/: integer-gmp.cabal  old-locale.cabal  old-time.cabal  parallel.cabal
test/Puns/cabals/: array.cabal  binary.cabal  bytestring.cabal  containers.cabal  mtl.cabal
test/Puns/cabals/no_text_error/: mtl.cabal
test/Puns/cabals/parse_error/: base.cabal
(+131 files in other folders)
