name:                 ide-backend
version:              0.6
synopsis:             An IDE backend library
-- description:
license:              AllRightsReserved
license-file:         LICENSE
author:               Duncan Coutts, Mikolaj Konarski, Edsko de Vries
maintainer:           Duncan Coutts <duncan@well-typed.com>
copyright:            (c) 2012 Well-Typed LLP
category:             Development
build-type:           Simple
cabal-version:        >=1.10

library
  exposed-modules:    IdeSession
  other-modules:      IdeSession.State,
                      IdeSession.Config,
                      IdeSession.Cabal,
                      IdeSession.Query,
                      IdeSession.Update,
                      IdeSession.GHC.Run,
                      IdeSession.GHC.Server,
                      IdeSession.GHC.HsWalk,
                      IdeSession.RPC.Server,
                      Paths_ide_backend,
                      IdeSession.Types.Public,
                      IdeSession.Types.Private,
                      IdeSession.Types.Translation,
                      IdeSession.Types.Progress,
                      IdeSession.Util,
                      IdeSession.Debug,
                      IdeSession.BlockingOps,
                      IdeSession.Strict.Container,
                      IdeSession.Strict.IntMap,
                      IdeSession.Strict.List,
                      IdeSession.Strict.Map,
                      IdeSession.Strict.Maybe,
                      IdeSession.Strict.Trie,
                      IdeSession.Strict.IntervalMap
                      IdeSession.Strict.MVar
                      IdeSession.Strict.IORef
                      IdeSession.Strict.StateT

  build-depends:      base                 ==4.*,
                      directory            ==1.*,
                      filemanip            >= 0.3.6.2,
                      process              ==1.*,
                      filepath             ==1.*,
                      ghc                  ==7.4.* || >=7.6.2,
                      containers           >= 0.4.1   && < 1,
                      random               >= 1.0.1   && < 2,
                      bytestring           >= 0.9.2   && < 1,
                      mtl                  >= 2,
                      async                >= 2.0     && < 2.1,
                      aeson                >= 0.6     && < 0.7,
                      executable-path      >= 0.0     && < 0.1,
                      unix                 >= 2.5     && < 2.8,
                      temporary            >= 1.1.2.4 && < 1.2,
                      bytestring-trie      >= 0.2     && < 0.3,
                      unordered-containers >= 0.2.3   && < 0.3,
                      text                 >= 0.11    && < 0.12,
                      fingertree           >= 0.0.1,
                      binary               == 0.5.1.0,
                      template-haskell,
                      data-accessor,
                      data-accessor-mtl,
                      transformers,
                      pureMD5,
                      crypto-api,
                      tagged,
                      syb,
                      Cabal                == 1.14.0,
                      ide-backend-rts      >= 0.1.1
  if impl(ghc >= 7.6.2)
     build-depends:   time      ==1.4.*
  else
     build-depends:   old-time  ==1.*

  default-language:   Haskell2010
  default-extensions: MonoLocalBinds,
                      BangPatterns, RecordWildCards, NamedFieldPuns
  other-extensions:   CPP, TemplateHaskell, ScopedTypeVariables,
                      DeriveDataTypeable
  ghc-options:        -Wall -fno-warn-unused-do-bind

  -- The standard macros don't give us 7.6.x granularity
  if impl(ghc == 7.6.1)
    cpp-options:     -DGHC_761

executable ide-backend-server
  main-is:            ide-backend-server.hs
  hs-source-dirs:     server
  build-depends:      ide-backend, base
  default-language:   Haskell2010
  ghc-options:        -threaded
                      -- use the compacting GC:
                      -with-rtsopts=-c

test-suite typecheck-dir
  type:               exitcode-stdio-1.0
  main-is:            typecheck-dir.hs
  build-depends:      ide-backend,
                      base                 ==4.*,
                      directory            ==1.*,
                      filemanip            >= 0.3.6.2,
                      process              ==1.*,
                      filepath             ==1.*,
                      ghc                  ==7.*,
                      containers           >= 0.4.1   && < 1,
                      random               >= 1.0.1   && < 2,
                      bytestring           >= 0.9.2   && < 1,
                      mtl                  >= 2,
                      async                >= 2.0     && < 2.1,
                      aeson                >= 0.6     && < 0.7,
                      executable-path      >= 0.0     && < 0.1,
                      unix                 >= 2.5     && < 2.8,
                      temporary            >= 1.1.2.4 && < 1.2,
                      bytestring-trie      >= 0.2     && < 0.3,
                      unordered-containers >= 0.2.3   && < 0.3,
                      text                 >= 0.11    && < 0.12,
                      fingertree           >= 0.0.1,
                      binary               == 0.5.1.0,
                      template-haskell,
                      data-accessor,
                      data-accessor-mtl,
                      transformers,
                      pureMD5,
                      crypto-api,
                      tagged,
                      syb,
                      Cabal                == 1.14.0,
                      ide-backend-rts      >= 0.1.1
  if impl(ghc >= 7.6.1)
     build-depends:   time      ==1.4.*
  else
     build-depends:   old-time  ==1.*

  default-language:   Haskell2010
  default-extensions: MonoLocalBinds,
                      BangPatterns, RecordWildCards, NamedFieldPuns
  other-extensions:   CPP, TemplateHaskell, ScopedTypeVariables,
                      DeriveDataTypeable
  ghc-options:        -Wall -fno-warn-unused-do-bind
  ghc-options:        -with-rtsopts=-K16M

test-suite ghc-errors
  type:               exitcode-stdio-1.0
  main-is:            ghc-errors.hs
  hs-source-dirs:     . test
  build-depends:      base                 ==4.*,
                      directory            ==1.*,
                      filemanip            >= 0.3.6.2,
                      process              ==1.*,
                      filepath             ==1.*,
                      ghc                  ==7.*,
                      containers           >= 0.4.1   && < 1,
                      random               >= 1.0.1   && < 2,
                      bytestring           >= 0.9.2   && < 1,
                      mtl                  >= 2,
                      async                >= 2.0     && < 2.1,
                      aeson                >= 0.6     && < 0.7,
                      test-framework       >= 0.6     && < 0.9,
                      test-framework-hunit >= 0.2     && < 0.4,
                      HUnit                >= 1.2     && < 1.3,
                      executable-path      >= 0.0     && < 0.1,
                      unix                 >= 2.5     && < 2.8,
                      temporary            >= 1.1.2.4 && < 1.2,
                      bytestring-trie      >= 0.2     && < 0.3,
                      unordered-containers >= 0.2.3   && < 0.3,
                      text                 >= 0.11    && < 0.12,
                      fingertree           >= 0.0.1,
                      binary               == 0.5.1.0,
                      data-accessor,
                      data-accessor-mtl,
                      transformers,
                      pureMD5,
                      crypto-api,
                      tagged,
                      template-haskell,
                      utf8-string,
                      syb,
                      Cabal                == 1.14.0,
                      ide-backend-rts      >= 0.1.1,
-- parallel is only needed for the code of the tests; please do not remove;
-- note that under cabal-dev it's still not enough and you need to install
-- parallel by hand into a regular package DB
                      parallel
  if impl(ghc >= 7.6.1)
     build-depends:   time      ==1.4.*
  else
     build-depends:   old-time  ==1.*

  default-language:   Haskell2010
  default-extensions: MonoLocalBinds,
                      BangPatterns, RecordWildCards, NamedFieldPuns
  other-extensions:   CPP, TemplateHaskell, ScopedTypeVariables,
                      DeriveDataTypeable
  ghc-options:        -Wall -fno-warn-unused-do-bind
-- TODO: setCurrentDirectory interacts badly with this
--  ghc-options:        -threaded
--  ghc-options:        -with-rtsopts=-N

test-suite rpc-server
  type:               exitcode-stdio-1.0
  main-is:            rpc-server.hs
  hs-source-dirs:     . test
  build-depends:      base                 ==4.*,
                      directory            ==1.*,
                      filemanip            >= 0.3.6.2,
                      process              ==1.*,
                      filepath             ==1.*,
                      ghc                  ==7.*,
                      containers           >= 0.4.1   && < 1,
                      random               >= 1.0.1   && < 2,
                      bytestring           >= 0.9.2   && < 1,
                      async                >= 2.0     && < 2.1,
                      aeson                >= 0.6     && < 0.7,
                      temporary            >= 1.1.2.4 && < 1.2,
                      test-framework       >= 0.6     && < 0.9,
                      test-framework-hunit >= 0.2     && < 0.4,
                      HUnit                >= 1.2     && < 1.3,
                      executable-path      >= 0.0     && < 0.1,
                      unix                 >= 2.5     && < 2.8,
                      binary               == 0.5.1.0,
                      template-haskell

  default-language:   Haskell2010
  default-extensions: MonoLocalBinds,
                      BangPatterns, RecordWildCards, NamedFieldPuns
  other-extensions:   CPP, TemplateHaskell, ScopedTypeVariables,
                      DeriveDataTypeable
  ghc-options:        -Wall -fno-warn-unused-do-bind

executable coc
  main-is:          coc.hs
  hs-source-dirs:   test
  build-depends:    ide-backend, base, random, time, bytestring
  default-language: Haskell2010
