name:                 ide-backend
version:              0.8.0
synopsis:             An IDE backend library
-- description:
license:              AllRightsReserved
license-file:         LICENSE
author:               Duncan Coutts, Mikolaj Konarski, Edsko de Vries
maintainer:           Duncan Coutts <duncan@well-typed.com>
copyright:            (c) 2012 Well-Typed LLP
data-files:           CoreLicenses.txt
category:             Development
build-type:           Simple
cabal-version:        >=1.10

Flag build-coc
  description: Build exe to measure cost of compilation
  default:     False

Flag test-pkg-dbs
  description: Build the test suite for package DBs
  default:     False

library
  exposed-modules:    IdeSession
  other-modules:      IdeSession.State,
                      IdeSession.Config,
                      IdeSession.Cabal,
                      IdeSession.Licenses,
                      IdeSession.Query,
                      IdeSession.Update,
                      IdeSession.RPC.Client,
                      IdeSession.RPC.API,
                      IdeSession.RPC.Stream,
                      IdeSession.Types.Public,
                      IdeSession.Types.Private,
                      IdeSession.Types.Translation,
                      IdeSession.Types.Progress,
                      IdeSession.GHC.API,
                      IdeSession.GHC.Requests,
                      IdeSession.GHC.Responses,
                      IdeSession.GHC.Client,
                      IdeSession.Util,
                      IdeSession.Util.BlockingOps,
                      IdeSession.Util.PrettyVal,
                      IdeSession.Strict.Container,
                      IdeSession.Strict.IntMap,
                      IdeSession.Strict.List,
                      IdeSession.Strict.Map,
                      IdeSession.Strict.Maybe,
                      IdeSession.Strict.Trie,
                      IdeSession.Strict.IntervalMap
                      IdeSession.Strict.MVar
                      IdeSession.Strict.IORef
                      IdeSession.Strict.StateT

  build-depends:      base                 ==4.*,
                      filemanip            >= 0.3.6.2 && < 0.4,
                      process              >= 1.1     && < 1.3,
                      filepath             >= 1.3     && < 1.4,
                      directory            >= 1.1     && < 1.3,
                      containers           >= 0.4.1   && < 1,
                      random               >= 1.0.1   && < 2,
                      bytestring           >= 0.9.2   && < 1,
                      mtl                  >= 2.1     && < 2.2,
                      async                >= 2.0     && < 2.1,
                      aeson                >= 0.6.2   && < 0.8,
                      executable-path      >= 0.0     && < 0.1,
                      unix                 >= 2.5     && < 2.8,
                      temporary            >= 1.1.2.4 && < 1.2,
                      bytestring-trie      >= 0.2     && < 0.3,
                      unordered-containers >= 0.2.3   && < 0.3,
                      text                 >= 0.11    && < 0.12,
                      fingertree           >= 0.0.1   && < 0.2,
                      binary-ide-backend   >= 0.7.1.0 && < 0.8,
                      data-accessor        >= 0.2     && < 0.3,
                      data-accessor-mtl    >= 0.2     && < 0.3,
                      crypto-api           >= 0.12    && < 0.13,
                      pureMD5              >= 2.1     && < 2.2,
                      tagged               >= 0.4     && < 0.8,
                      transformers         >= 0.3     && < 0.4,
                      time                 >= 1.4     && < 1.5,
                      template-haskell,
                      -- our own private fork:
                      Cabal-ide-backend    >= 1.18,
                      ghc-prim,
                      pretty-show

  default-language:   Haskell2010
  default-extensions: MonoLocalBinds,
                      BangPatterns, RecordWildCards, NamedFieldPuns
  other-extensions:   CPP, TemplateHaskell, ScopedTypeVariables,
                      DeriveDataTypeable
  ghc-options:        -Wall -fno-warn-unused-do-bind

test-suite typecheck-dir
  type:               exitcode-stdio-1.0
  main-is:            typecheck-dir.hs
  hs-source-dirs:     test
  build-depends:      base, ide-backend, temporary, filemanip, directory, time, text

  default-language:   Haskell2010
  default-extensions: MonoLocalBinds,
                      BangPatterns, RecordWildCards, NamedFieldPuns
  other-extensions:   CPP, TemplateHaskell, ScopedTypeVariables,
                      DeriveDataTypeable
  ghc-options:        -Wall -fno-warn-unused-do-bind
  ghc-options:        -with-rtsopts=-K16M

test-suite ghc-errors
  type:               exitcode-stdio-1.0
  main-is:            ghc-errors.hs
-- server for Debug:
  hs-source-dirs:     test server
  build-depends:      base, ide-backend, text, random, utf8-string, bytestring,
                      unix, process, filemanip, temporary, filepath, directory,
                      HUnit, test-framework, test-framework-hunit, time,
                      regex-compat, deepseq, containers,
                      Cabal-ide-backend,
-- parallel is only needed for the code of the tests; please do not remove.
-- Note that under cabal-dev it's still not enough and you need to install
-- parallel by hand into a regular package DB; similarly for *-mtl.
                      parallel, MonadCatchIO-mtl, MonadCatchIO-transformers

  default-language:   Haskell2010
  default-extensions: MonoLocalBinds,
                      BangPatterns, RecordWildCards, NamedFieldPuns
  other-extensions:   CPP, TemplateHaskell, ScopedTypeVariables,
                      DeriveDataTypeable
  ghc-options:        -Wall -fno-warn-unused-do-bind
-- TODO: setCurrentDirectory interacts badly with this
--  ghc-options:        -threaded
--  ghc-options:        -with-rtsopts=-N

test-suite test-pkg-dbs
  type:               exitcode-stdio-1.0
  main-is:            test-pkg-dbs.hs
-- server for Debug:
  hs-source-dirs:     test server
  if flag(test-pkg-dbs)
    build-depends:      base, ide-backend,
                        bytestring, directory, filepath, text, process,
                        HUnit, test-framework, test-framework-hunit
  else
    buildable: False

  default-language:   Haskell2010
  default-extensions: MonoLocalBinds,
                      BangPatterns, RecordWildCards, NamedFieldPuns
  other-extensions:   CPP, TemplateHaskell, ScopedTypeVariables,
                      DeriveDataTypeable
  ghc-options:        -Wall -fno-warn-unused-do-bind

test-suite rpc-server
  type:               exitcode-stdio-1.0
  main-is:            rpc-server.hs
  hs-source-dirs:     . server test
  build-depends:      base                 ==4.*,
                      directory            ==1.*,
                      filemanip            >= 0.3.6.2 && < 0.4,
                      process              ==1.*,
                      filepath             ==1.*,
                      containers           >= 0.4.1   && < 1,
                      random               >= 1.0.1   && < 2,
                      bytestring           >= 0.9.2   && < 1,
                      async                >= 2.0     && < 2.1,
                      aeson                >= 0.6     && < 0.7,
                      temporary            >= 1.1.2.4 && < 1.2,
                      test-framework       >= 0.6     && < 0.9,
                      test-framework-hunit >= 0.2     && < 0.4,
                      HUnit                >= 1.2     && < 1.3,
                      executable-path      >= 0.0     && < 0.1,
                      unix                 >= 2.5     && < 2.8,
                      binary-ide-backend   >= 0.7.1.0 && < 0.8,
                      template-haskell

  default-language:   Haskell2010
  default-extensions: MonoLocalBinds,
                      BangPatterns, RecordWildCards, NamedFieldPuns
  other-extensions:   CPP, TemplateHaskell, ScopedTypeVariables,
                      DeriveDataTypeable
  ghc-options:        -Wall -fno-warn-unused-do-bind

executable coc
  main-is:          coc.hs
  hs-source-dirs:   test
  if flag(build-coc)
    build-depends:    ide-backend, base, random, time, bytestring
  else
    buildable: False
  default-language: Haskell2010
