name:                 ide-backend-server
version:              0.9.0
synopsis:             An IDE backend server
description:          Server executable used internally by the ide-backend library.
license:              MIT
license-file:         LICENSE
author:               Duncan Coutts, Mikolaj Konarski, Edsko de Vries
maintainer:           Duncan Coutts <duncan@well-typed.com>
copyright:            (c) 2015 FP Complete
category:             Development
build-type:           Simple
cabal-version:        >=1.10

executable ide-backend-server
  main-is:            ide-backend-server.hs
  other-modules:      IdPropCaching
                      Server
                      Debug
                      HsWalk
                      Break
                      FilePathCaching
                      Run
                      Conv
                      TraceMonad
                      Haddock
                      GhcShim.GhcShim742
                      GhcShim.API
                      GhcShim.GhcShim78
                      GhcShim.GhcShim710
                      GhcShim
  build-depends:      base < 10,
                      ghc                  == 7.4.* || == 7.8.* || == 7.10.*,
                      containers           >= 0.4.1   && < 1,
                      bytestring           >= 0.9.2   && < 1,
                      data-accessor        >= 0.2     && < 0.3,
                      data-accessor-mtl    >= 0.2     && < 0.3,
                      async                >= 2.0     && < 2.1,
                      unix                 >= 2.5     && < 2.8,
                      text                 >= 0.11    && < 1.3,
                      directory            >= 1.1     && < 1.3,
                      filepath             >= 1.3     && < 1.5,
                      process              >= 1.1     && < 1.3,
                      transformers         >= 0.3     && < 0.5,
                      -- mtl 2.2 is broken
                      mtl     == 2.1.* || (>= 2.2.1   && < 2.3),
                      unordered-containers >= 0.2.3   && < 0.3,
                      filemanip            >= 0.3.6.2 && < 0.4,
                      array                >= 0.4     && < 0.6,
                      temporary            >= 1.1.2.4 && < 1.3,
                      ide-backend-common   >= 0.9     && < 0.10

  -- The standard macros don't give us 7.6.x granularity
  -- We _could_ add support for 7.6, 7.6.1 specifically is broken (#7548)
  if impl(ghc == 7.6.1)
    cpp-options: -DGHC_761

  if impl(ghc == 7.4.2.*)
    build-depends: old-time >= 1.1  && < 1.2,
                   haddock  >= 2.11 && < 2.12,
                   -- use whatever version came with ghc
                   Cabal
    cpp-options: -DGHC_742
  if impl(ghc == 7.8.*)
    build-depends: time        == 1.4.*,
                   haddock-api == 2.15.*,
                   -- use whatever version came with ghc
                   Cabal
    cpp-options: -DGHC_78
    ghc-options: -dynamic
  if impl(ghc == 7.10.*)
    build-depends: time        == 1.5.*,
                   haddock-api == 2.16.*,
                   -- although from 7.10 basic datatypes are defined in
                   -- bin-package-db rather than Cabal, we still need Cabal for
                   -- parsing functionality; use whatever version came with ghc
                   Cabal
    cpp-options: -DGHC_710
    ghc-options: -dynamic

  default-language:   Haskell2010
  default-extensions: MonoLocalBinds,
                      BangPatterns, RecordWildCards, NamedFieldPuns
  other-extensions:   TemplateHaskell

  ghc-options:        -Wall
                      -threaded
                      -rtsopts
                      -- use the compacting GC:
                      -with-rtsopts=-c
                      -- disable idle GC
                      -with-rtsopts=-I0
